css/layout.css
/* Main layout */
div#map {
    width: auto;
    height: 100%;
    margin: 0;
    overflow: hidden;
}

div.panel {
    position: absolute;
    top: 3.5em;
    left: 1em;
    width: 19em;
    margin: 0;
    padding: 1em 1em 0 1em;
    z-index: 1001;
    max-height: 85%;
    overflow-x: hidden;
    overflow-y: auto;
}

div#displayPanel, div#statsPanel, div#aboutPanel {
    display: none;
}

div#menuButtonRow {
    position: absolute;
    top: 1em;
    left: 1em;
    margin: 0;
    z-index: 1200;
}

div.menuButton {
    display: inline-block;
    padding: 0.2em 0.5em;
    text-align: center;
}

h4.menu-heading {
    margin-top: 0.2em;
    margin-bottom: 0.2em;
}

h4.menu-heading span.arrow {
    font-size: 0.8em;
    margin-left: 0.2em;
    position: relative;
    top: -0.15em;
}

div.menu-content {
    display: none;
    margin: 0.5em 0 1em 0.5em;
}

input#fileSelect {
    width: 17em;
}

div#loadingStatus {
    display: none;
}

/* Style for things in the controls panels that are indented from the left by the width of a checkbox, to make them line
up with a checkbox's accompanying label. */
.indentControl {
    margin-left: 1.8em;
}

table.statsTable {
    width: 100%;
    border-collapse: collapse;
    border: 1px solid;
    margin-bottom: 1em;
}

table.statsTable th, table.statsTable td {
    border: 1px solid;
    padding: 0.2em 0.5em;
}

span.dialog-open-link {
    font-size: 0.8em;
    float: right;
    margin-top: 4px;
}

div.dialog {
    position: absolute;
    top:  50%;
    left: 50%;
    transform: translate(-50%,-50%);
    z-index: 9999;
    padding: 0 1em;
    display: none;
    max-height: 85%;
    overflow: auto;
}

/* Stats rows that are hidden by default */
tr.statsTimeOnOffRow {
    display: none;
}

img.flag {
    position: relative;
    top: 3px;
}

/* Popup layout */
table.popupQSOTable {
    line-height: 1em;
    position: relative;
    left: -3px;
}

/* Hide certain elements until we have something to put in there */
table#qsoFiltersTable {
    display: none;
}

